[gd_scene load_steps=6 format=2]

[ext_resource path="res://Fonts/Onett.tres" type="DynamicFont" id=1]
[ext_resource path="res://Scenes/KeyBindings.gd" type="Script" id=2]
[ext_resource path="res://Fonts/Onett.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Scenes/TransitionOpen.tscn" type="PackedScene" id=4]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 3 )

[node name="KeyBindings" type="CanvasLayer"]
layer = 5
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
color = Color( 0.145098, 0.145098, 0.14902, 1 )

[node name="Panel" type="Panel" parent="."]
anchor_left = 0.392
anchor_top = 0.097
anchor_right = 0.414
anchor_bottom = 0.183
margin_right = 200.0
margin_bottom = 400.0
mouse_filter = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
anchor_left = 0.091
anchor_top = 0.054
anchor_right = 0.72
anchor_bottom = 0.85
margin_left = -0.250051
margin_top = -0.3864
margin_right = 39.7798
margin_bottom = -42.86
__meta__ = {
"_edit_use_anchors_": false
}

[node name="save" type="Button" parent="Panel"]
anchor_top = 0.908
anchor_bottom = 0.946
margin_left = 6.592
margin_top = -28.2527
margin_right = 102.592
margin_bottom = 16.5865
custom_fonts/font = ExtResource( 1 )
action_mode = 0
text = "save"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="back" type="Button" parent="Panel"]
anchor_top = 0.908
anchor_bottom = 0.946
margin_left = 118.592
margin_top = -28.2527
margin_right = 210.592
margin_bottom = 16.5865
custom_fonts/font = ExtResource( 1 )
action_mode = 0
text = "back"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="inUseErr" type="Label" parent="Panel"]
margin_left = 23.0
margin_top = 350.0
margin_right = 191.0
margin_bottom = 380.0
custom_colors/font_color = Color( 0.894118, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "Key already in use"
percent_visible = 0.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TransitionOpen" parent="." instance=ExtResource( 4 )]
layer = -1

[connection signal="pressed" from="Panel/save" to="." method="_on_save_pressed"]
[connection signal="pressed" from="Panel/back" to="." method="_on_back_pressed"]
